css/stylesheet.css
.realblog_search_form {
    text-align: right;
}

/* Textareas */

.realblog_headline_field {
    width: 99%;
    height: 200px;
}
.realblog_story_field {
    width: 99%;
    height: 500px;
}

/* buttons */

.realblog_buttons {
padding: 6px 0;
}

.realblog_button {
    display: inline-block;
    border: 1px solid #888;
    padding: 0.1em 0.5em;
    text-decoration: none;
    cursor: pointer;
}

.realblog_fields_block #date1 {
margin-bottom: 12px;
}
.realblog_fields_block table {
    width: 100%;
}

.realblog_label {
    font-weight: bold;
}

.realblog_entry_footer {
    overflow: auto;
}

.realblog_number_of_comments {
float: left;
font-style: italic;
}

.realblog_read_more {
float: right;
padding-bottom: 12px;
}

/* BACKEND select entry table */

.realblog_table {
    width: 100%;
    table-layout: auto;
    border: 1px solid;
    border-collapse: collapse;
}

.realblog_table_header, .realblog_table_footer {
    background: #555;
    color: #fff;
    padding: 0.5em 0;
    font-weight: bold;
    text-align: center;
}
.realblog_table_header button, .realblog_table_footer button {
    background: none;
    border: none;
    cursor: pointer;
}

.realblog_table_details {
border: 1px solid #075FB9;
}

.realblog_table_line {
    padding: 0.3em;
    text-align: center;
}
.realblog_table_line:nth-child(4), .realblog_table_line:nth-child(6),
.realblog_table_line:nth-child(7), .realblog_table_line:nth-child(8) {
    font-weight: bold;
}

.realblog_table_title {
    padding: 0.3em 1em;
    border-bottom: 1px solid;
}

.realblog_table_line img, .realblog_table_header img {
border: 0;
}

.realblog_pagination {
    font-size: small;
    text-align: right;
}

.realblog_table_paging {
    text-align: center;
}
.realblog_table_paging a {
    text-decoration: none;
}

/* entries overwiew */

.realblog_entries_preview {
border-top: 1px solid;
margin: 10px 0 0 0;
}

/**
 * Multi column overwiew
 *
 * Uncomment the following two rules to enable a tabular blog overview.
 * Also uncomment the rules for the desired number of columns below.
 */
/*
.realblog_entry_preview {
    box-sizing: border-box;
    padding: 0 1em;
    float: left;
}
.realblog_entries_preview::after {
    content: " ";
    display: block;
    height: 0;
    clear: both;
}
*/

/* 2 colums
.realblog_entry_preview {width: 50%}
.realblog_entry_preview:nth-child(2n+1) {clear: both}
*/
/* 3 columns
.realblog_entry_preview {width: 33%}
.realblog_entry_preview:nth-child(3n+1) {clear: both}
*/
/* 4 colums
.realblog_entry_preview {width: 25%}
.realblog_entry_preview:nth-child(4n+1) {clear: both}
*/
/* 5 colums
.realblog_entry_preview {width: 20%}
.realblog_entry_preview:nth-child(5n+1) {clear: both}
*/

.realblog_show_date {
font-size: 94%;
font-weight: 700;
font-style: italic;
margin: 6px 0 10px 0;
}

.realblog_show_story {
width: 100%;
border-bottom: 1px solid;
}

.realblog_show_story_entry {
width: 100%;
border-bottom: 0;
}

.realblog_show_box {
margin: 10px 0;
width:100%;
overflow: hidden;
}

/* tpl_classes for function realbloglink */

.realbloglink {
    font-weight: 700;
}

.realblog_tpl_show_date {
font-style: italic;
border-top: 1px solid;
padding: 5px 0 0 0;
margin: 6px 0 0 0;
}

.realblog_tpl_show_story {}

.realblog_tpl_read_more {
    text-align: right;
}

.realblog_tpl_show_box {
border-bottom: 1px solid;
padding: 0 0 8px 0;
}

.realblog_most_popular a, .realblog_most_popular span {
    display: block;
}

.realblog_admin {
height:24px;
background-color: #075FB9;
color: White;
display: block;
}

.realblog_date_selector {
    margin: 0 0 -3px 1px;
}

.realblog_archive_title {
    font-weight: bold;
}
.realblog_archive {
    padding-left: 0;
}
.realblog_archive li {
    list-style: none;
}

.realblog_search_input {
border: 1px solid #999;
padding: 2px 5px;
}

.realblog_searchresult_head {
    font-weight: bold;
}

/*
 * Back-end.
 */
.realblog_logo {
    float: left;
    margin-right: 16px;
}
.realblog_license {
    text-align: justify;
}
.realblog_systemcheck {
    list-style: none;
    padding-left: 0;
}
.realblog_systemcheck img {
    padding-right: 0.5em;
}

.realblog_filter {
    margin: 1em 0;
}
.realblog_filter label {
    margin-right: 1em;
}

.realblog_data_exchange form {
    margin: 1em 0;
}

